--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +8,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: outfit;
 }
 
 body{
@@ -15,5 +18,10 @@ body{
 a{
     text-decoration: none;
     color: inherit;
+}
+
+.app{
+    width: 80%;
+    margin: auto;
 }
 
