--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -46,8 +46,8 @@
 .navbar button{
     background: transparent;
     font-size: 16px;
-    color: rgb(156, 186, 250);
-    border: 1px solid rgb(156, 186, 250);
+    color: black;
+    border: 1px solid black;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
@@ -56,7 +56,9 @@
 
 .navbar button:hover{
     background-color: rgb(156, 186, 250);
+    border: 1px solid rgb(156, 186, 250);
     color: white;
+    
 }
 
 .navbar .active{
@@ -64,3 +66,4 @@
     border-bottom: 2px solid rgb(49, 49, 94);
 
 }
+
