--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,13 @@
 .footer{
     color: whitesmoke;
-    background-color: rgba(17, 15, 15, 0.89);
+    background-color: rgb(12, 48, 77);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     padding: 20px 8vw;
     padding-top: 80px;
+    margin-top: 70px;
 }
 
 .footer-content{
@@ -37,7 +38,7 @@
 }
 
 .image1{
-    width: 220px;
+    width: 230px;
 }
 
 .footer-content-right h2, .footer-content-center h2{
